@@ -154,16 +154,15 @@ sub update_gui {
 
 		# Relative-to-the-project filename
 		my $document = Padre::Current->document;
- 		if( defined( $document->file ) ) { # check that the document has been saved
+		if ( defined( $document->file ) ) { # check that the document has been saved
 			my $filename = $document->file->{filename};
 			if ( defined( $document->project_dir ) ) {
 				my $project_dir = quotemeta $document->project_dir;
 				$filename =~ s/^$project_dir//;
 			}
 			$syntax->SetItem( $idx, 2, sprintf( Wx::gettext('No errors or warnings found in %s.'), $filename ) );
-		}
-		else {
-			$syntax->SetItem( $idx, 2, Wx::gettext('No errors or warnings found.' ) );
+		} else {
+			$syntax->SetItem( $idx, 2, Wx::gettext('No errors or warnings found.') );
 		}
 		return;
 	}
